# usb-audio

./: .gitignore
examples/device/audio_test_freertos/: CMakeLists.txt  sdkconfig
examples/device/audio_test_freertos/src/: CMakeLists.txt  main.c  tusb_config.h
examples/device/cdc_msc_freertos/: sdkconfig
examples/device/uac2_headset_freeRTOS/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/device/uac2_headset_freeRTOS/components/i2c_bus/: CMakeLists.txt
examples/device/uac2_headset_freeRTOS/components/i2s_bus/: i2s_bus.c
examples/device/uac2_headset_freeRTOS/components/i2s_bus/include/: i2s_bus.h
examples/device/uac2_headset_freeRTOS/src/: CMakeLists.txt  main.c  tusb_config.h
examples/device/uac2_headset_freertos/: 22.pcm  dump.pcm  sdkconfig
examples/device/uac2_headset_freertos/components/es8311/: es8311.c
examples/device/uac2_headset_freertos/components/i2c_bus/: i2c_bus.c
examples/device/uac2_headset_freertos/components/i2s_bus/: CMakeLists.txt  i2s_bus.c
examples/device/uac2_headset_freertos/src/: CMakeLists.txt  main.c
src/class/audio/: audio_device.c
src/portable/espressif/esp32s2/: dcd_esp32s2.c
